   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bugs fixed
       - Fixed integration of JAXB in the JAXRS extension.
         Reported by Julien Landuré.

- 2.0.6 (2011-03-31)
    - Bugs fixed
       - Fixed Redirector when the targer URI is on a distinct domain.
         Reported by Guido Schmidt.
       - Fixed potential issue in ClientResource regarding the actual
         entity being resent in case of error.
       - Apache HTTP Client was processing cookies like a browser while
         as a Restlet client connector it shouldn't have done so, like
         for other connector such as the internal client.
         Reported by Kristoffer Gronowski and Martin Svensson
    - Misc
       - Clarified default property values of the TunnelService class.
         
- 2.0.5 (2011-02-09)
    - Bugs fixed
       - Fixed bug in virtual host router that was failing if no host 
         URI was set. Now falls back to the host part of the resource URI.
       - Fixed handling of "EDM Single" properties.
         Reported by Andreas Taube.  
       - Fixed ClientResource#put(Object,MediaType) and 
         #post(Object,MediaType) methods of the GWT edition.
         Reported by Charlie Mason.
       - Fixed bug causing first entity byte to be eaten if the connection
         wasn't persisting. Reported by Sebastien Gaide and Olivier Miel. 
       - Fixed potential NPE with conditional requests.
         Reported by Carolyn Duby.
       - Fixed potential race issues in internal HTTP connector under high
         load. Reported by Leandro Oliveira.
       - Fixed bug with AWS S3 authentication due to wrong insertion of
         HTTP headers. Reported by Sebastien Gaide.
       - The GWT proxies generated at compilation time weren't setting 
         their preference for the GWT object serialization format.
       
 
- 2.0.4 (2010-12-24)
    - Bugs fixed
	   - Extension headers on responses were now supported by the